statefulset/azure-PersistentVolumeClaim-pod.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: web
spec:
  serviceName: "nginx"
  selector:
    matchLabels:
      app: nginx
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: k8s.gcr.io/nginx-slim:0.8
        ports:
        - containerPort: 8080
          name: web
        volumeMounts:
        - name: azure
          mountPath: /usr/share/nginx/html
      volumes:
      - name: azure
        persistentVolumeClaim:
          claimName: sample-storage-claim
